// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PoolManager gas tests #donate donation of 1 token 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 150972,
}
`;

exports[`PoolManager gas tests #donate donation of 2 tokens 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 218062,
}
`;

exports[`PoolManager gas tests #initialize initialize pool with no hooks and no protocol fee 1`] = `
Object {
  "calldataByteLength": 196,
<<<<<<< HEAD
  "gasUsed": 51173,
=======
  "gasUsed": 53774,
>>>>>>> 43d7a44 (feat: add events for initialize, swap, and modify)
}
`;

exports[`PoolManager gas tests #mint above current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
  "gasUsed": 181204,
=======
  "gasUsed": 183332,
>>>>>>> 43d7a44 (feat: add events for initialize, swap, and modify)
}
`;

exports[`PoolManager gas tests #mint above current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
  "gasUsed": 240745,
=======
  "gasUsed": 242872,
>>>>>>> 43d7a44 (feat: add events for initialize, swap, and modify)
}
`;

exports[`PoolManager gas tests #mint above current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
  "gasUsed": 181204,
=======
  "gasUsed": 183332,
>>>>>>> 43d7a44 (feat: add events for initialize, swap, and modify)
}
`;

exports[`PoolManager gas tests #mint around current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
  "gasUsed": 249677,
=======
  "gasUsed": 251804,
>>>>>>> 43d7a44 (feat: add events for initialize, swap, and modify)
}
`;

exports[`PoolManager gas tests #mint around current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
  "gasUsed": 358922,
=======
  "gasUsed": 361049,
>>>>>>> 43d7a44 (feat: add events for initialize, swap, and modify)
}
`;

exports[`PoolManager gas tests #mint around current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
  "gasUsed": 249677,
=======
  "gasUsed": 251804,
>>>>>>> 43d7a44 (feat: add events for initialize, swap, and modify)
}
`;

exports[`PoolManager gas tests #mint below current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
  "gasUsed": 181881,
=======
  "gasUsed": 184008,
>>>>>>> 43d7a44 (feat: add events for initialize, swap, and modify)
}
`;

exports[`PoolManager gas tests #mint below current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
  "gasUsed": 305790,
=======
  "gasUsed": 307917,
>>>>>>> 43d7a44 (feat: add events for initialize, swap, and modify)
}
`;

exports[`PoolManager gas tests #mint below current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
  "gasUsed": 181881,
=======
  "gasUsed": 184008,
>>>>>>> 43d7a44 (feat: add events for initialize, swap, and modify)
}
`;

exports[`PoolManager gas tests #swapExact0For1 first swap in block moves tick, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 324,
<<<<<<< HEAD
<<<<<<< HEAD
  "gasUsed": 229884,
=======
  "gasUsed": 231763,
>>>>>>> 43d7a44 (feat: add events for initialize, swap, and modify)
=======
  "gasUsed": 232020,
>>>>>>> 15a03f9 (feat: return sqrtPriceX96 from Pool.swap)
}
`;

exports[`PoolManager gas tests #swapExact0For1 first swap in block with no tick movement 1`] = `
Object {
  "calldataByteLength": 324,
<<<<<<< HEAD
<<<<<<< HEAD
  "gasUsed": 223962,
=======
  "gasUsed": 225840,
>>>>>>> 43d7a44 (feat: add events for initialize, swap, and modify)
=======
  "gasUsed": 226098,
>>>>>>> 15a03f9 (feat: return sqrtPriceX96 from Pool.swap)
}
`;

exports[`PoolManager gas tests #swapExact0For1 first swap in block, large swap crossing a single initialized tick 1`] = `
Object {
  "calldataByteLength": 324,
<<<<<<< HEAD
<<<<<<< HEAD
  "gasUsed": 248860,
=======
  "gasUsed": 250740,
>>>>>>> 43d7a44 (feat: add events for initialize, swap, and modify)
=======
  "gasUsed": 251014,
>>>>>>> 15a03f9 (feat: return sqrtPriceX96 from Pool.swap)
}
`;

exports[`PoolManager gas tests #swapExact0For1 first swap in block, large swap crossing several initialized ticks 1`] = `
Object {
  "calldataByteLength": 324,
<<<<<<< HEAD
<<<<<<< HEAD
  "gasUsed": 290988,
=======
  "gasUsed": 292868,
>>>>>>> 43d7a44 (feat: add events for initialize, swap, and modify)
=======
  "gasUsed": 293192,
>>>>>>> 15a03f9 (feat: return sqrtPriceX96 from Pool.swap)
}
`;

exports[`PoolManager gas tests #swapExact0For1 first swap in block, large swap, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 324,
<<<<<<< HEAD
<<<<<<< HEAD
  "gasUsed": 241926,
=======
  "gasUsed": 243804,
>>>>>>> 43d7a44 (feat: add events for initialize, swap, and modify)
=======
  "gasUsed": 244062,
>>>>>>> 15a03f9 (feat: return sqrtPriceX96 from Pool.swap)
}
`;

exports[`PoolManager gas tests #swapExact0For1 second swap in block moves tick, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 324,
<<<<<<< HEAD
<<<<<<< HEAD
  "gasUsed": 229884,
=======
  "gasUsed": 231763,
>>>>>>> 43d7a44 (feat: add events for initialize, swap, and modify)
=======
  "gasUsed": 232020,
>>>>>>> 15a03f9 (feat: return sqrtPriceX96 from Pool.swap)
}
`;

exports[`PoolManager gas tests #swapExact0For1 second swap in block with no tick movement 1`] = `
Object {
  "calldataByteLength": 324,
<<<<<<< HEAD
<<<<<<< HEAD
  "gasUsed": 224051,
=======
  "gasUsed": 225929,
>>>>>>> 43d7a44 (feat: add events for initialize, swap, and modify)
=======
  "gasUsed": 226187,
>>>>>>> 15a03f9 (feat: return sqrtPriceX96 from Pool.swap)
}
`;

exports[`PoolManager gas tests #swapExact0For1 second swap in block, large swap crossing a single initialized tick 1`] = `
Object {
  "calldataByteLength": 324,
<<<<<<< HEAD
<<<<<<< HEAD
  "gasUsed": 243055,
=======
  "gasUsed": 244934,
>>>>>>> 43d7a44 (feat: add events for initialize, swap, and modify)
=======
  "gasUsed": 245208,
>>>>>>> 15a03f9 (feat: return sqrtPriceX96 from Pool.swap)
}
`;

exports[`PoolManager gas tests #swapExact0For1 second swap in block, large swap crossing several initialized ticks 1`] = `
Object {
  "calldataByteLength": 324,
<<<<<<< HEAD
<<<<<<< HEAD
  "gasUsed": 285157,
=======
  "gasUsed": 287036,
>>>>>>> 43d7a44 (feat: add events for initialize, swap, and modify)
=======
  "gasUsed": 287361,
>>>>>>> 15a03f9 (feat: return sqrtPriceX96 from Pool.swap)
}
`;
